Legal Case Capture/LegalCaseMgmtMVP/force-app/main/default/objects/LegalCaseNote__c/LegalCaseNote__c.object-meta.xml
<CustomObject>
    <label>Legal Case Note</label>
    <pluralLabel>Legal Case Notes</pluralLabel>
    <nameField>
        <label>Legal Case Note Name</label>
        <type>AutoNumber</type>
        <displayFormat>NOTE-{0000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>