Legal Case Capture/LegalCaseMgmtMVP/force-app/main/default/objects/LegalCaseNote__c/fields/Author__c.field-meta.xml
<CustomField>
    <fullName>Author__c</fullName>
    <label>Author</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>AuthoredCaseNotes</relationshipName>
</CustomField>