Legal Case Capture/LegalCaseMgmtMVP/force-app/main/default/objects/LegalCaseNote__c/fields/LegalCase__c.field-meta.xml
<CustomField>
    <fullName>LegalCase__c</fullName>
    <label>Legal Case</label>
    <type>MasterDetail</type>
    <referenceTo>LegalCase__c</referenceTo>
    <relationshipName>LegalCaseNotes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>