Legal Case Capture/LegalCaseMgmtMVP/force-app/main/default/objects/LegalCaseNote__c/fields/NoteDate__c.field-meta.xml
<CustomField>
    <fullName>NoteDate__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>