Legal Case Capture/LegalCaseMgmtMVP/force-app/main/default/objects/LegalCaseNote__c/fields/NoteDetail__c.field-meta.xml
<CustomField>
    <fullName>NoteDetail__c</fullName>
    <label>Note Detail</label>
    <type>Html</type>
    <length>32768</length>
</CustomField>