Legal Case Capture/LegalCaseMgmtMVP/force-app/main/default/objects/LegalCaseNote__c/fields/NoteDetailSearch__c.field-meta.xml
<CustomField>
    <fullName>NoteDetailSearch__c</fullName>
    <label>Note Detail Search</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>